Backoff Done Input Remaining

--- a/Sunchit_Sharma.ipynb
+++ b/Sunchit_Sharma.ipynb
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 527,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -186,6 +186,9 @@
       "GOOD TURING : \n",
       "0.2375\n",
       "\n",
+      "BACKOFF : \n",
+      "2.76012355953\n",
+      "\n",
       "NEXT POSSIBLE WORDS WITH FREQUENCIES\n",
       "a\t:\t2\n",
       "the\t:\t1\n",
@@ -201,7 +204,7 @@
        "<plotly.tools.PlotlyDisplay object>"
       ]
      },
-     "execution_count": 488,
+     "execution_count": 527,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -412,6 +415,35 @@
     "\n",
     "def backoff(n_grams):\n",
     "  # perform Backoff\n",
+    "    one_gm = language_model(tokens,1,False)\n",
+    "    two_gm = language_model(tokens,2,False)\n",
+    "    three_gm = language_model(tokens,3,False)\n",
+    "    \n",
+    "    fd={}\n",
+    "    \n",
+    "    fd[1]=dict(one_gm)\n",
+    "    fd[2]=dict(two_gm)\n",
+    "    fd[3]=dict(three_gm)\n",
+    "    \n",
+    "    wt=tokenize(n_grams)\n",
+    "    \n",
+    "    final_backoff_score=0\n",
+    "    \n",
+    "    for i in range(0,len(wt)):\n",
+    "        if len(wt[i:i+3])==3:\n",
+    "            if tuple(wt[i:i+3]) in fd[3].keys():\n",
+    "                final_backoff_score+=((fd[3][tuple(wt[i:i+3])])*1.0/fd[2][tuple(wt[i:i+2])])\n",
+    "            elif tuple(wt[i:i+2]) in fd[2].keys():\n",
+    "                final_backoff_score+=((fd[2][tuple(wt[i:i+2])])*1.0/(fd[1][tuple(wt[i:i+1])]+len(fd[2].keys())))\n",
+    "            elif tuple(wt[i:i+1]) in fd[1].keys():\n",
+    "                final_backoff_score+=((fd[1][tuple(wt[i:i+1])])*1.0/(0.0003+len(fd[1].keys())))\n",
+    "            else:\n",
+    "                final_backoff_score+=0.0003\n",
+    "    \n",
+    "    return final_backoff_score\n",
+    "        \n",
+    "    \n",
+    "    \n",
     "    pass\n",
     "  \n",
     "def deleted_interpolation(n_grams):\n",
@@ -432,6 +464,10 @@
     "print\n",
     "print \"GOOD TURING : \"\n",
     "print good_turing(\"i am a\")\n",
+    "\n",
+    "print\n",
+    "print \"BACKOFF : \"\n",
+    "print backoff(\"i am a i am x y x the\")\n",
     "\n",
     "print\n",
     "print \"NEXT POSSIBLE WORDS WITH FREQUENCIES\"\n",
@@ -619,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 531,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -631,10 +667,13 @@
      "output_type": "stream",
      "text": [
       "The Laplase gives : \n",
-      "18.7945696804\n",
+      "17.3124300112\n",
       "\n",
       "The Good Turing gives : \n",
-      "14.5106575147\n"
+      "7562.12551621\n",
+      "\n",
+      "The Backoff gives : \n",
+      "5.66666666667\n"
      ]
     }
    ],
@@ -664,11 +703,18 @@
     "    print(\"The Good Turing gives : \")\n",
     "    print 1*1.0/(x*c)\n",
     "    \n",
+    "    x=backoff(sentence)\n",
+    "    \n",
+    "    print\n",
+    "    print(\"The Backoff gives : \")\n",
+    "    print x\n",
+    "    \n",
+    "    \n",
     "\n",
     "text = \"i am a i am a i am the Mr. John Johnson Jr. was born in the U.S.A but earned his Ph.D. in Israel before joining Nike Inc. as an engineer. He also worked at craigslist.org as a business analyst. Mr. Smith bought cheapsite.com for 1.5 million dollars, i.e. he paid a lot for it. Did he mind? Adam Jones Jr. thinks he didn't. In any case, this isn't true... Well, with a probability of 0.9 it isn't don's in Israel ok.\"\n",
     "tokens=tokenize(text) # TESTED\n",
     "sorted_gm=language_model(tokens, 3, False) \n",
-    "score_grammaticality(\"aninal i am a i am not don\",sorted_gm)"
+    "score_grammaticality(\"i am a i am a i am the\",sorted_gm)"
    ]
   },
   {
