Unigram Plot done Input Remaining

--- a/Sunchit_Sharma.ipynb
+++ b/Sunchit_Sharma.ipynb
@@ -492,7 +492,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 537,
    "metadata": {
     "colab": {},
     "colab_type": "code",
@@ -509,6 +509,19 @@
       "it \t\t:\t0.667\n",
       "By N-Gram model approach the word is correct by 100.00 Percent\n"
      ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<iframe id=\"igraph\" scrolling=\"no\" style=\"border:none;\" seamless=\"seamless\" src=\"https://plot.ly/~sunchitsharma9/6.embed\" height=\"525px\" width=\"100%\"></iframe>"
+      ],
+      "text/plain": [
+       "<plotly.tools.PlotlyDisplay object>"
+      ]
+     },
+     "execution_count": 537,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -519,15 +532,22 @@
     "    import plotly.graph_objs as go\n",
     "\n",
     "    # Add data\n",
-    "    month = ['January', 'February', 'March', 'April', 'May', 'June', 'July',\n",
-    "             'August', 'September', 'October', 'November', 'December']\n",
-    "    high_2014 = [28.8, 28.5, 37.0, 56.8, 69.7, 79.7, 78.5, 77.8, 74.1, 62.6, 45.3, 39.9]\n",
+    "    \n",
+    "    unig = language_model(tokens,1,False)\n",
+    "    \n",
+    "    x_axis=[]\n",
+    "    y_axis=[]\n",
+    "    \n",
+    "    for i in unig:\n",
+    "        x_axis.append(i[0][0])\n",
+    "        y_axis.append(i[1])\n",
+    "        \n",
     "\n",
     "    # Create and style traces\n",
     "    trace0 = go.Scatter(\n",
-    "        x = month,\n",
-    "        y = high_2014,\n",
-    "        name = 'High 2014',\n",
+    "        x = x_axis,\n",
+    "        y = y_axis,\n",
+    "        name = 'Unigram Plot',\n",
     "        line = dict(\n",
     "            color = ('rgb(205, 12, 24)'),\n",
     "            width = 4)\n",
@@ -536,13 +556,13 @@
     "    data = [trace0]\n",
     "\n",
     "    # Edit the layout\n",
-    "    layout = dict(title = 'Average High and Low Temperatures in New York',\n",
-    "                  xaxis = dict(title = 'Month'),\n",
-    "                  yaxis = dict(title = 'Temperature (degrees F)'),\n",
+    "    layout = dict(title = 'Unigram Plot',\n",
+    "                  xaxis = dict(title = 'Tokens'),\n",
+    "                  yaxis = dict(title = 'Frequency'),\n",
     "                  )\n",
     "\n",
     "    fig = dict(data=data, layout=layout)\n",
-    "    py.iplot(fig, filename='styled-line')\n",
+    "    return fig\n",
     "\n",
     "def spell_checker(word, n_grams):\n",
     "# Given a word check if the spelling is correct using your Language model\n",
@@ -640,7 +660,10 @@
     "\n",
     "text = \"i am a i am a i am the Mr. John Johnson Jr. was born in the U.S.A but earned his Ph.D. in Israel before joining Nike Inc. as an engineer. He also worked at craigslist.org as a business analyst. Mr. Smith bought cheapsite.com for 1.5 million dollars, i.e. he paid a lot for it. Did he mind? Adam Jones Jr. thinks he didn't. In any case, this isn't true... Well, with a probability of 0.9 it isn't don's in Israel ok.\"\n",
     "tokens=tokenize(text) # TESTED\n",
-    "spell_checker(\"hit\",2)"
+    "spell_checker(\"hit\",2)\n",
+    "\n",
+    "fig = plot_ngram_freqs(1)\n",
+    "py.plotly.iplot(fig, filename='Unigram_plot')"
    ]
   },
   {
